# ADV_Carquest

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  fetch_repos.py  repos.json  sdkconfig.defaults
cardpokemon/main/: CMakeLists.txt  cardpokemon_main.cpp  idf_component.yml  pokemon_color_badges.h
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/apps/: apps.h
main/apps/app_chat/: app_chat.cpp  app_chat.h
main/apps/app_chat/assets/: chat_big.h  chat_small.h
main/apps/app_clock/: app_clock.cpp  app_clock.h
main/apps/app_dummy/: app_dummy.cpp  app_dummy.h
main/apps/app_gps/: app_gps.cpp  app_gps.h
main/apps/app_imu/: app_imu.cpp  app_imu.h
main/apps/app_keyboard/: app_keyboard.cpp  app_keyboard.h  select_menu.cpp
main/apps/app_launcher/: app_launcher.cpp  app_launcher.h
main/apps/app_lora_chat/: app_lora_chat.cpp  app_lora_chat.h
main/apps/app_record/: app_record.cpp  app_record.h
main/apps/app_remote/: app_remote.cpp  app_remote.h
main/apps/app_repl/: app_repl.cpp  app_repl.h
main/apps/app_sdcard/: app_sdcard.cpp  app_sdcard.h
main/apps/app_set_wifi/: app_set_wifi.cpp  app_set_wifi.h
main/apps/app_signal_quest/: app_signal_quest.cpp  app_signal_quest.h
main/apps/app_stringir_toolkit/: app_stringir_toolkit.cpp  app_stringir_toolkit.h
main/apps/app_wifi_scan/: app_wifi_scan.cpp  app_wifi_scan.h
main/apps/utils/: common.h
main/assets/: assets.h
main/hal/: hal.cpp  hal.h  hal_config.h
main/hal/cap_lora868/: cap_lora868.cpp  cap_lora868.h
main/hal/keyboard/: keybaord.cpp  keyboard.cpp  keyboard.h  keymap.h
(+314 files in other folders)
